# FlexAPI

./: .gitignore  README.md  pyproject.toml
flexapi/cores/: __init__.py  application.py  request.py  response.py  router.py  service.py
flexapi/server/: app.py
flexapi/utils/: consist_variable.py  types.py
