[tool.poetry]
name = "flexapi"
version = "0.1.0"
description = ""
authors = ["gui <changdig@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
requests = "^2.31.0"
zeep = "^4.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
